<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/parent_background"
    android:padding="35dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_detail_cardview_background"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/character_image"
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="9dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/placeholder_rickandmorty"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/characterStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_status_background"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/character_status"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/characterName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:padding="15dp"
                    android:text="@string/character_name"
                    android:textAlignment="textStart"
                    android:textColor="@color/character_name"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/character_image"
                    app:layout_constraintStart_toStartOf="@id/character_image"
                    app:layout_constraintTop_toBottomOf="@id/character_image" />

                <ImageView
                    android:id="@+id/gender_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:src="@drawable/gender_male_svg"
                    app:layout_constraintEnd_toStartOf="@id/characterGender"
                    app:layout_constraintStart_toStartOf="@id/characterName"
                    app:layout_constraintTop_toTopOf="@id/characterGender"
                    app:layout_constraintBottom_toBottomOf="@id/characterGender"/>

                <TextView
                    android:id="@+id/characterGender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:maxLines="2"
                    android:text="@string/character_gender"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@id/view_line"
                    app:layout_constraintStart_toEndOf="@id/gender_view"
                    app:layout_constraintTop_toBottomOf="@id/characterName" />

                <View
                    android:id="@+id/view_line"
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="20dp"
                    android:background="#000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/characterGender" />

                <TextView
                    android:id="@+id/characterSpecie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="15dp"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:maxLines="2"
                    android:text="@string/character_specie"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@id/character_image"
                    app:layout_constraintStart_toEndOf="@id/view_line"
                    app:layout_constraintTop_toTopOf="@id/characterGender" />

                <TextView
                    android:id="@+id/characterOrigin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:text="@string/character_origin"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/character_image"
                    app:layout_constraintStart_toStartOf="@id/character_image"
                    app:layout_constraintTop_toBottomOf="@id/gender_view" />

                <ImageView
                    android:id="@+id/location_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/location_view_svg"
                    app:layout_constraintEnd_toStartOf="@id/last_location_txt"
                    app:layout_constraintStart_toStartOf="@id/characterOrigin"
                    app:layout_constraintTop_toBottomOf="@id/characterOrigin" />

                <TextView
                    android:id="@+id/last_location_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:letterSpacing="0.1"
                    android:padding="5dp"
                    android:text="@string/last_location_txt"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@id/view_line"
                    app:layout_constraintStart_toEndOf="@id/location_view"
                    app:layout_constraintTop_toTopOf="@id/location_view" />

                <TextView
                    android:id="@+id/characterLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:padding="5dp"
                    android:text="@string/character_location"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/character_image"
                    app:layout_constraintStart_toStartOf="@id/last_location_txt"
                    app:layout_constraintTop_toBottomOf="@id/last_location_txt" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>